# objrpc

./: .gsmake.json  CMakeLists.txt  Podfile  README.md  objrpc.podspec
objrpc-ios.xcodeproj/: project.pbxproj
objrpc-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
objrpc-ios.xcworkspace/: contents.xcworkspacedata
src/com/gsrpc/: channel.h  future.h  future.m  gsrpc.gs.h  gsrpc.gs.m  service.gs.h  service.gs.m  stream.h  stream.m
src/com/gsrpc/trace/: tracer.gs.h  tracer.gs.m
test/: main.cpp  main.m
test/com/gsrpc/test/: test.gs.h  test.gs.m
