cmake_minimum_required(VERSION 3.2)

PROJECT(objrpc)

INCLUDE_DIRECTORIES(src)

FILE(GLOB_RECURSE SRCFILES src/*.m)

FILE(GLOB_RECURSE INCLUDEFILES src/*.h)

ADD_LIBRARY(
    objrpc
    SHARED
    ${SRCFILES} ${INCLUDEFILES})

MESSAGE(${INCLUDEFILES})

set_target_properties(
    objrpc PROPERTIES
    FRAMEWORK TRUE
    FRAMEWORK_VERSION 1.0.0
    PUBLIC_HEADER "${INCLUDEFILES}"
)
